[package]
name = "wasm-gol"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.60"
lazy_static = "*"
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
  "console",
  "CanvasRenderingContext2d",
]
[profile.release]
debug = true